feat(gui): rebuild every panel on the design system
Overview was the only view using the new tokens, so the others read as a
different application sitting behind the same window frame — which is what the
screenshot showed and what describing the panels had not.

All six now compose Cards, StatTiles, Badges and Meters, take every colour from
Tokens and every gap from the spacing scale. Three structural changes came with
that:

  - Servers dropped its split pane. A list you had to click to learn anything
    from, beside a details pane that was empty until you did, is two panes doing
    the work of one list of cards that simply shows everything.
  - Performance dropped three nested split panes for a single scrolling column
    of cards. Resizable dividers are a way of asking the reader to lay out the
    page themselves.
  - System's CPU and heap figures gained Meters. A percentage is a proportion,
    and a bare number makes the reader convert it.

The remaining hardcoded colours are deliberate: two add an alpha channel to a
token, and two set white text on the accent-coloured selection, which is
correct in both themes.

Every public method signature is unchanged, so MainFrame needed no edits, and
no data was dropped — every stat, table column, chart and button action still
computes exactly as before. This was chrome, not behaviour.

783 tests pass.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>