@@ -15,58 +15,71 @@
  */
 package com.jagrosh.jmusicbot.commands.v2.admin;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.stream.Collectors;
 
+import com.jagrosh.jdautilities.command.SlashCommand;
 import com.jagrosh.jdautilities.command.SlashCommandEvent;
 import com.jagrosh.jmusicbot.Bot;
-import com.jagrosh.jmusicbot.commands.v2.AdminSlashCommand;
 import com.jagrosh.jmusicbot.i18n.Language;
-import com.jagrosh.jmusicbot.settings.Settings;
 
+import net.dv8tion.jda.api.Permission;
 import net.dv8tion.jda.api.interactions.commands.OptionType;
 import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 
 /**
- * Sets the bot's language for this server.
+ * Sets the display language, for one person or for the whole server.
+ *
+ * <p>Not an admin-only command. A server-wide language is the wrong unit on its own — servers
+ * are not monolingual, and one setting for everyone means somebody is always reading a
+ * language they did not choose. Anyone can set their own; changing the server's default still
+ * requires Manage Server, because that decides what everyone who has not chosen will see.
  *
  * @author adan (xx445469)
  */
-public class LanguageSlashCmd extends AdminSlashCommand
+public class LanguageSlashCmd extends SlashCommand
 {
+    private static final String SCOPE_ME = "me";
+    private static final String SCOPE_SERVER = "server";
+
+    private final Bot bot;
+
     public LanguageSlashCmd(Bot bot)
     {
-        super(bot);
+        this.bot = bot;
         this.name = "language";
-        this.help = "sets the bot language for this server";
+        this.help = "sets the language the bot replies to you in";
+        this.guildOnly = true;
 
-        OptionData option = new OptionData(OptionType.STRING, "language",
-                                           "language to use (leave empty to show the current one)", false);
+        OptionData language = new OptionData(OptionType.STRING, "language",
+                                             "language to use (leave empty to see the current one)", false);
 
-        // Choices are limited to languages that actually loaded. Offering one whose file is
-        // missing would let a user select a language that silently renders entirely in
-        // English. Each is labelled in itself — someone who needs to switch away from a
-        // language they cannot read has to recognise their own language's name to escape.
-        for (Language language : bot.getLanguages().getAvailableLanguages())
+        // Only languages that actually loaded. Offering one whose file is missing would let
+        // someone select a language that then renders entirely in English. Each is labelled in
+        // itself, since anyone escaping a language they cannot read has to recognise their own.
+        for (Language option : bot.getLanguages().getAvailableLanguages())
         {
-            option.addChoice(language.getNativeName() + " (" + language.getEnglishName() + ")",
-                             language.name());
+            language.addChoice(option.getNativeName() + " (" + option.getEnglishName() + ")", option.name());
         }
 
-        this.options = Collections.singletonList(option);
+        OptionData scope = new OptionData(OptionType.STRING, "scope",
+                                          "who this applies to (default: just you)", false)
+                .addChoice("Just me", SCOPE_ME)
+                .addChoice("Everyone on this server", SCOPE_SERVER);
+
+        this.options = List.of(language, scope);
         this.aliases = bot.getConfig().getAliases(this.name);
     }
 
     @Override
-    public void doAdminCommand(SlashCommandEvent event)
+    protected void execute(SlashCommandEvent event)
     {
-        Settings settings = event.getClient().getSettingsFor(event.getGuild());
+        boolean serverScope = SCOPE_SERVER.equals(
+                event.getOption("scope") == null ? SCOPE_ME : event.getOption("scope").getAsString());
 
         if (event.getOption("language") == null)
         {
-            Language current = settings.getLanguage(bot.getConfig());
-            event.reply(bot.msg(event.getGuild(), "settings.language.current",
-                                current.getNativeName())).queue();
+            showCurrent(event, serverScope);
             return;
         }
 
@@ -80,18 +93,75 @@ public class LanguageSlashCmd extends AdminSlashCommand
             String available = bot.getLanguages().getAvailableLanguages().stream()
                                   .map(Language::name)
                                   .collect(Collectors.joining(", "));
-            event.reply(event.getClient().getError() + " "
-                        + bot.msg(event.getGuild(), "settings.language.invalid", requested, available))
-                 .setEphemeral(true).queue();
+            reply(event, bot.getConfig().getError() + " "
+                  + bot.msgFor(event.getGuild(), event.getUser(),
+                               "settings.language.invalid", requested, available), true);
             return;
         }
 
-        settings.setLanguage(language);
+        if (serverScope)
+        {
+            setServerLanguage(event, language);
+            return;
+        }
 
-        // Replied to after the change, so the confirmation itself arrives in the new
-        // language — immediate proof the switch took effect.
-        event.reply(event.getClient().getSuccess() + " "
-                    + bot.msg(event.getGuild(), "settings.language.set", language.getNativeName()))
-             .queue();
+        bot.getUserLanguages().set(event.getUser().getIdLong(), language);
+
+        // Replied to after the change, so the confirmation arrives in the new language — the
+        // shortest possible proof it worked.
+        reply(event, bot.getConfig().getSuccess() + " "
+              + bot.msgFor(event.getGuild(), event.getUser(),
+                           "settings.language.setPersonal", language.getNativeName()), true);
+    }
+
+    private void setServerLanguage(SlashCommandEvent event, Language language)
+    {
+        if (event.getMember() == null || !event.getMember().hasPermission(Permission.MANAGE_SERVER))
+        {
+            reply(event, bot.getConfig().getError() + " "
+                  + bot.msgFor(event.getGuild(), event.getUser(), "permissions.errors.needManageServer"),
+                  true);
+            return;
+        }
+
+        bot.getSettingsManager().getSettings(event.getGuild()).setLanguage(language);
+
+        reply(event, bot.getConfig().getSuccess() + " "
+              + bot.msg(event.getGuild(), "settings.language.set", language.getNativeName()), false);
+    }
+
+    private void showCurrent(SlashCommandEvent event, boolean serverScope)
+    {
+        if (serverScope)
+        {
+            Language current = bot.getSettingsManager().getSettings(event.getGuild()).getLanguage(bot.getConfig());
+            reply(event, bot.msgFor(event.getGuild(), event.getUser(),
+                                    "settings.language.current", current.getNativeName()), true);
+            return;
+        }
+
+        Language personal = bot.getUserLanguages().get(event.getUser().getIdLong()).orElse(null);
+
+        if (personal == null)
+        {
+            Language inherited = bot.getSettingsManager().getSettings(event.getGuild()).getLanguage(bot.getConfig());
+            reply(event, bot.msgFor(event.getGuild(), event.getUser(),
+                                    "settings.language.currentInherited", inherited.getNativeName()), true);
+            return;
+        }
+
+        reply(event, bot.msgFor(event.getGuild(), event.getUser(),
+                                "settings.language.currentPersonal", personal.getNativeName()), true);
+    }
+
+    /**
+     * Replies, ephemerally for anything concerning one person.
+     *
+     * <p>A personal preference is nobody else's business, and a channel full of "your language
+     * is now X" notices is noise for everyone who did not run the command.
+     */
+    private static void reply(SlashCommandEvent event, String message, boolean ephemeral)
+    {
+        event.reply(message).setEphemeral(ephemeral).queue();
     }
 }
